@@ -1,5 +1,8 @@
 /*
  * $Log: setuidgid.c,v $
+ * Revision 1.6  2021-09-11 10:20:02+05:30  Cprogrammer
+ * set additional groups using -g option
+ *
  * Revision 1.5  2020-09-16 19:06:56+05:30  Cprogrammer
  * FreeBSD fix
  *
@@ -16,7 +19,6 @@
  * Initial revision
  *
  */
-#include <stdio.h>
 #include <sys/types.h>
 #include <unistd.h>
 #ifdef FREEBSD
@@ -27,27 +29,63 @@
 #include <setuserid.h>
 #include <strerr.h>
 #include <sgetopt.h>
-#include "prot.h"
-#include "pathexec.h"
+#include <prot.h>
+#include <pathexec.h>
+#include <alloc.h>
+#include <scan.h>
 
 #define FATAL "setuidgid: fatal: "
-char           *usage = "usage: setuidgid [-s] account child";
 
-struct passwd  *pw;
+void
+set_additional_groups(char *groups)
+{
+	struct group   *gr;
+	char           *ptr, *cptr;
+	int             ngroups, i = 0;
+	gid_t          *gidset;
+
+	for (ptr = groups, ngroups = 0; *ptr; ptr++) {
+		if (*ptr == ',')
+			ngroups++;
+	}
+	ngroups++;
+	if (!(gidset = (gid_t *) alloc(ngroups * sizeof(gid_t))))
+		strerr_die2x(111, FATAL, "out of memory");
+	for (ptr = cptr = groups; *ptr; ptr++) {
+		if (*ptr == ',') {
+			*ptr = 0;
+			if (!(gr = getgrnam(cptr)))
+				strerr_die3x(111, FATAL, "unknown group: ", cptr);
+			gidset[i++] = gr->gr_gid;
+			*ptr = ',';
+			cptr = ptr + 1;
+		}
+	}
+	if (!(gr = getgrnam(cptr)))
+		strerr_die3x(111, FATAL, "unknown group: ", cptr);
+	gidset[i++] = gr->gr_gid;
+	if (setgroups(ngroups, gidset))
+		strerr_die2sys(111, FATAL, "unable to setgroups: ");
+	return;
+}
 
 int
 main(int argc, char **argv, char **envp)
 {
+	struct passwd  *pw;
 	gid_t          *gidset;
-	char           *account;
+	char           *account, *groups = 0, *usage = "usage: setuidgid [-s] account child";
 	char          **child;
 	int             ngroups = 0, opt;
 
-	while ((opt = getopt(argc, argv, "s")) != opteof) {
+	while ((opt = getopt(argc, argv, "sg:")) != opteof) {
 		switch (opt)
 		{
 		case 's':
 			ngroups = 1;
+			break;
+		case 'g':
+			groups = optarg;
 			break;
 		default:
 			strerr_die1x(100, usage);
@@ -67,9 +105,10 @@ main(int argc, char **argv, char **envp)
 		if (setgroups(ngroups, gidset))
 			strerr_die2sys(111, FATAL, "unable to setgroups: ");
 	}
+	if (groups)
+		set_additional_groups(groups);
 	if (prot_uid(pw->pw_uid) == -1)
 		strerr_die2sys(111, FATAL, "unable to setuid: ");
-
 	pathexec_run(*child, child, envp);
 	strerr_die4sys(111, FATAL, "unable to run ", *child, ": ");
 	/*- Not reached */
@@ -79,7 +118,7 @@ main(int argc, char **argv, char **envp)
 void
 getversion_setuidgid_c()
 {
-	static char    *x = "$Id: setuidgid.c,v 1.5 2020-09-16 19:06:56+05:30 Cprogrammer Exp mbhangui $";
+	static char    *x = "$Id: setuidgid.c,v 1.6 2021-09-11 10:20:02+05:30 Cprogrammer Exp mbhangui $";
 
 	x++;
 }
