@@ -154,6 +154,8 @@ o svscan: ability to run as PID 1 and reap dead children
     caller
 - 05/09/2021
 66. changed permissions for dirs with 555 to 755
+- 11/09/2021
+67. setuidgid.c: Feature to set additional groups using -g option
 
 * Sunday 14 February 2021 07:46:33 PM IST
 Release 1.0 Start 09/10/2020
